# clce-ai-logic-layer

./: LICENSE  README.md  pyproject.toml
examples/: basic_clce.py
src/clce/: __init__.py  parser.py  translator.py
