[project]
name = "clce-ai-logic-layer"
version = "0.1.0"
description = "Common Logic Controlled English exact python for AI FOL thinking layer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["lark>=1.2.0","z3-solver>=4.13.0","sympy>=1.13.0","pydantic>=2.10.0"]
